--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 									<button class="btn btn-primary search" type="button" id="button-addon2"><i class="fas fa-search"></i></button>
 								</div>
 							</div>
-						<div class="container cityHist"></div>
+						<div class="container cityHistory"></div>
 					</div>
 						<div class="col-12 col-md-9 col-xl-9 colTwo">
 							<div class="row today">
@@ -41,6 +41,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-	<script src="./assets/js/scripts.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>	
+	<script src="./assets/js/script.js"></script>
   </body>
 </html>
