--- a/index.html
+++ b/index.html
@@ -6,15 +6,17 @@
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"/>
-		<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+		<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" /> 
 		<link rel="stylesheet" href="./assets/css/styles.css" />
     <title>Weather Forecast</title>
   </head>
   <body>
 		<h1>Weather Forecast</h1>
+		<!--Container is created-->
 			<div class="container-fluid mainCon">
 				<div class="row">
 					<div class="col-12 col-md-3 col-xl-3 colOne">
+						<!--Search bar-->
 						<label>Search for a City:</label>
 							<div class="input-group mb-3">
 								<input type="text" class="form-control textVal">
@@ -22,8 +24,8 @@
 									<button class="btn btn-primary search" type="button" id="button-addon2"><i class="fas fa-search"></i></button>
 								</div>
 							</div>
-						<div class="container cityHistory"></div>
 					</div>
+					<!--Cards created that will hold weather data-->
 						<div class="col-12 col-md-9 col-xl-9 colTwo">
 							<div class="row today">
 								<div class="card bg-light mb-3 " style="max-width: 400px;">
@@ -34,13 +36,17 @@
 									</div>
 								</div>
 							</div>
+							<!--Forecast cards-->
 						<div class="row fiveForecast"></div>
 					</div>
                 </div>
             </div>
+	<!--jQuery used to help simplify some JavaScript functions-->		
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
+	<!--Ajax used for retrieving API data-->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+	<!--Day js used for getting current day and time-->
 	<script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>	
 	<script src="./assets/js/script.js"></script>
   </body>
